--- a/icons_launcher.yaml
+++ b/icons_launcher.yaml
@@ -1,5 +1,5 @@
 icons_launcher:
-  image_path: "assets/image/need.png"
+  image_path: 'asset/image/need.png'
   platforms:
     android:
       enable: true
